--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
     "@react-google-maps/api": "^2.20.3",
+    "@tanstack/react-query": "^5.60.5",
+    "axios": "^1.7.7",
     "emailjs-com": "^3.2.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
